# WorldNewsBackend

./: .env.example  .gitignore  API_DOCUMENTATION.md  API_USAGE_EXAMPLES.md  Dockerfile  FRONTEND_INTEGRATION.md  MULTILINGUAL_VIDEO_UPLOAD_GUIDE.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
apps/: urls.py
apps/common/: admin.py  logging.py  middleware.py
apps/common/management/commands/: assign_admin_view_perms.py  grant_staff_permissions.py
apps/common/models/: __init__.py  base.py
apps/common/utils/: files.py  utils.py
apps/common/utils/files/: __init__.py  files.py
apps/logs/: admin.py
apps/logs/migrations/: 0001_initial.py
apps/posts/: admin.py  urls.py  views.py
apps/posts/management/commands/: create_categories.py  seed_sample_posts.py
apps/posts/migrations/: 0001_initial.py  0002_remove_post_content_remove_post_short_description_and_more.py
apps/posts/models/: __init__.py  post.py
apps/posts/serializers/: __init__.py  post.py
apps/users/migrations/: 0002_alter_userprofile_profile_photo.py
apps/users/models/: profile.py
apps/users/service/: send_mail_tasks.py
core/: admin.py  settings.py  storages.py  urls.py
